--- a/index.html
+++ b/index.html
@@ -50,13 +50,7 @@
             <canvas id="gameCanvas" width="400" height="400"></canvas>
         </div>
         <div id="leaderboard" class="info-column">
-          <div class="leaderboard-header">
-            <h2>🏆 Leaderboard</h2>
-            <div class="leaderboard-toggles">
-              <button id="globalBtn" class="toggle-btn active">Global</button>
-              <button id="regionalBtn" class="toggle-btn">My Region</button>
-            </div>
-          </div>
+          <h2>🏆 Global Top 100</h2>
           <ol id="leaderboardList"><li>Loading...</li></ol>
         </div>
     </div>
