--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h2>🏆 Leaderboard</h2>
             <div class="leaderboard-toggles">
               <button id="globalBtn" class="toggle-btn active">Global</button>
-              <button id="regionalBtn" class="toggle-btn">My Region</button>
+              <button id="regionalBtn" class="toggle-btn" disabled>My Country</button>
             </div>
           </div>
           <ol id="leaderboardList"><li>Loading...</li></ol>
@@ -74,7 +74,7 @@
         <p>Your Final Score: <span id="finalScore">0</span></p>
         <div class="game-over-buttons">
           <button id="playAgainBtn">Play Again</button>
-          <button id="lobbyBtn">Close</button>
+          <button id="lobbyBtn">Back to Lobby</button>
         </div>
         <div class="share-section">
             <p>Share your score!</p>
