--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Press+Start+2P&display=swap" rel="stylesheet">
   
   <link rel="icon" type="image/png" href="favicon.png">
-  
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -52,7 +51,7 @@
         </div>
         <div id="leaderboard" class="info-column">
           <div class="leaderboard-header">
-            <h2>🏆 Leaderboard</h2>
+            <h2>🏆 Global Top 100</h2>
             <div class="leaderboard-toggles">
               <button id="globalBtn" class="toggle-btn active">Global</button>
               <button id="regionalBtn" class="toggle-btn" disabled>My Country</button>
