--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
 </head>
 <body>
   <div class="container">
-    <div class="top-bar">
-      <button id="muteBtn" class="icon-button">🔊</button>
-    </div>
     
-    <h1>🐍 Snake Retro 🕹️</h1> 
+    <header class="page-header">
+      <div class="header-spacer"></div>
+      <h1>🐍 Snake Retro 🕹️</h1> 
+      <div class="top-bar">
+        <button id="muteBtn" class="icon-button">🔊</button>
+      </div>
+    </header>
     
     <div id="auth-container">
         <div id="loginScreen">
