--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Retro Snake Game</title>
+    <title>🐍 Snake Retro 🕹️</title>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="page-header">
             <div class="header-spacer"></div>
-            <h1>RETRO SNAKE</h1>
+            <h1>🐍 Snake Retro 🕹️</h1>
             <button id="muteBtn" class="icon-button">🔊</button>
         </div>
 
@@ -56,10 +56,10 @@
             <div class="info-column">
                 <div id="leaderboard">
                     <div class="leaderboard-header">
-                        <h2>LEADERBOARD</h2>
+                        <h2>🏆 Top 100 🏆</h2>
                         <div class="leaderboard-toggles">
                             <button id="globalBtn" class="toggle-btn active">Global</button>
-                            <button id="regionalBtn" class="toggle-btn" disabled>Regional</button>
+                            <button id="regionalBtn" class="toggle-btn" disabled>Country</button>
                         </div>
                     </div>
                     <ul id="leaderboardList"></ul>
@@ -68,7 +68,7 @@
         </div>
 
         <div class="page-footer">
-            <a href="https://www.buymeacoffee.com/yourusername" class="donation-button" target="_blank">Buy me a coffee</a>
+            <a href="https://www.buymeacoffee.com/franbucho" class="donation-button" target="_blank">Buy me a coffee</a>
         </div>
     </div>
 
@@ -77,13 +77,13 @@
             <h2>GAME OVER</h2>
             <p>Your score: <span id="finalScore">0</span></p>
             <div class="game-over-buttons">
-                <button id="playAgainBtn">Play Again</button>
+                <button id="playAgainBtn">Replay</button>
                 <button id="lobbyBtn">Back to Lobby</button>
             </div>
             <div class="share-section">
                 <p>Share your score:</p>
                 <div class="share-buttons">
-                    <button id="twitterShareBtn" class="share-button twitter">Twitter</button>
+                    <button id="twitterShareBtn" class="share-button twitter">X</button>
                     <button id="whatsappShareBtn" class="share-button whatsapp">WhatsApp</button>
                 </div>
             </div>
