--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
 
         <div class="page-footer">
-            <a href="https://www.buymeacoffee.com/franbucho" class="donation-button" target="_blank">Buy me a coffee</a>
+            <a href="https://www.buymeacoffee.com/franbucho" class="donation-button" target="_blank">Support the Project ☕</a>
         </div>
     </div>
 
