--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div id="auth-container">
             <div id="loginScreen">
                 <button id="loginBtn" class="google-btn">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" alt="Google logo">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" alt="Google logo" class="google-logo-icon">
                     Sign in with Google
                 </button>
             </div>
@@ -44,19 +44,19 @@
                 <div id="game-area">
                     <canvas id="gameCanvas"></canvas>
                     <div id="messageOverlay">
-                        <p id="messageText" aria-live="polite">Face Snake!</p>
+                        <p id="messageText" aria-live="polite">Face Control</p>
                         <button id="startButton">Start Game</button>
                     </div>
                 </div>
                 
                 <video id="inputVideo" autoplay muted playsinline></video>
                 <button id="startBtn" class="hidden">Start Game</button> 
-                </div>
+            </div>
 
             <div class="info-column">
                 <div id="leaderboard">
                     <div class="leaderboard-header">
-                        <h2>🏆 Top 100 🏆</h2>
+                        <h2>Top 100 🏆</h2>
                         <div class="leaderboard-toggles">
                             <button id="globalBtn" class="toggle-btn active">Global</button>
                             <button id="regionalBtn" class="toggle-btn" disabled>Country</button>
