--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div id="auth-container">
             <div id="loginScreen">
                 <button id="loginBtn" class="google-btn">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" alt="Google logo" class="google-logo-icon">
+                    <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="Google logo" class="google-logo-icon">
                     Sign in with Google
                 </button>
             </div>
