--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>🐍 Snake Retro 🕹️</title>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="favicon.png"> 
 </head>
 <body>
     <div class="container">
